--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>pokendex</h1>
+    <h1 class="page-title">pokendex</h1>
     <ul class="pokemon-list">  </ul>
+    <!-- <button id="show-modal">Show modal</button> -->
+    <div id="modal-container">
+      <!-- <div class="modal">
+        <button class="modal-close">Close</button>
+        <h1>Modal title</h1>
+        <p>Modal text</p>       
+      </div> -->
+    </div>
+    <div id="image-container"></div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
